@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/sqlite
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.232 2009/04/14 02:30:13 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.233 2009/04/19 00:10:20 arfrever Exp $
+
+  18 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  sqlite-3.6.13:
+  Enable column metadata (bug #266651).
 
 *sqlite-3.6.13 (14 Apr 2009)
 
